# microchip-zsdk

./: CMakeLists.txt  CODEOWNERS  Kconfig  README.md  west.yml
applications/mcuboot/mcuboot_basic/: README.md  app_common.h  boards.yaml
applications/mcuboot/mcuboot_basic/app_v1/: CMakeLists.txt  prj.conf  sysbuild.conf
applications/mcuboot/mcuboot_basic/app_v1/boards/: pic32ck_sg01_cult.conf
applications/mcuboot/mcuboot_basic/app_v1/src/: main.c
applications/mcuboot/mcuboot_basic/app_v1/sysbuild/: mcuboot.conf
applications/mcuboot/mcuboot_basic/app_v2/: CMakeLists.txt  sysbuild.conf
applications/mcuboot/mcuboot_basic/app_v2/boards/: pic32ck_gc01_cult.conf
applications/mcuboot/mcuboot_basic/app_v2/src/: main.c
applications/mcuboot/mcuboot_basic/app_v2/sysbuild/: mcuboot.overlay
applications/mcuboot/mcuboot_basic/mcuboot/boards/: pic32ck_gc01_cult.conf  pic32ck_gc01_cult.overlay  pic32ck_sg01_cult.conf  pic32ck_sg01_cult.overlay
doc/: Getting_Started_with_Microchip_zSDK.md  Running_Zephyr_on_a_Microchip_MPU.md  index.md
doc/mcuboot/: demo_app_pic32cksg.md
drivers/: CMakeLists.txt  Kconfig
scripts/: west-commands.yml
scripts/jlink/pic32ck_sg01_curiosity_ultra/: erase_all.jlink  erase_mcuboot_trailers.jlink  flash_mcuboot.jlink  flash_mcuboot_signed_app.jlink  flash_mcuboot_signed_upgrade.jlink
scripts/west_commands/: __init__.py  mcuboot_build.py
zephyr/: module.yml
